upload recent changes for llama ipynb sample

--- a/test_llama.ipynb
+++ b/test_llama.ipynb
@@ -2,16 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> initializing model parallel with size 1\n",
+      "> initializing ddp with size 1\n",
+      "> initializing pipeline with size 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shaoshu/.conda/envs/roboranking/lib/python3.9/site-packages/torch/__init__.py:690: UserWarning: torch.set_default_tensor_type() is deprecated as of PyTorch 2.1, please use torch.set_default_dtype() and torch.set_default_device() as alternatives. (Triggered internally at ../torch/csrc/tensor/python_tensor.cpp:451.)\n",
+      "  _C._set_default_tensor_type(t)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded in 9.45 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "from llama_generation import LLAMA_Generation\n",
     "\n",
-    "agent = LLAMA_Generation()\n",
+    "import os\n",
     "\n",
-    "# response = agent.generate(content_text, verbose=False)\n",
-    "# print(response)"
+    "os.environ['MASTER_ADDR'] = 'localhost'\n",
+    "os.environ['MASTER_PORT'] = '12356'\n",
+    "os.environ['RANK'] = '0'\n",
+    "os.environ['WORLD_SIZE'] = '1'\n",
+    "\n",
+    "agent = LLAMA_Generation(\n",
+    "        ckpt_dir='llama-2-7b-chat/',\n",
+    "        tokenizer_path='tokenizer.model',\n",
+    "        max_seq_len=512,\n",
+    "        max_batch_size=8\n",
+    ")"
    ]
   },
   {
@@ -24,7 +58,7 @@
      "output_type": "stream",
      "text": [
       "YES\n",
-      "7.915496826171875e-05\n"
+      "8.559226989746094e-05\n"
      ]
     }
    ],
@@ -42,9 +76,22 @@
     "# remove space in string\n",
     "response = response.replace(\" \", \"\")\n",
     "print(response)\n",
-    "print(time.time() - start)\n",
-    "\n",
-    "# delete the agent and empty the GPU memory\n",
+    "print(time.time() - start)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# delete the agent and empty the GPU memory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "del agent\n",
     "import gc\n",
     "gc.collect()\n",
@@ -70,7 +117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
