upload test files

--- a/test_llama.ipynb
+++ b/test_llama.ipynb
@@ -2,46 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> initializing model parallel with size 1\n",
-      "> initializing ddp with size 1\n",
-      "> initializing pipeline with size 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/shaoshu/.conda/envs/roboranking/lib/python3.9/site-packages/torch/__init__.py:690: UserWarning: torch.set_default_tensor_type() is deprecated as of PyTorch 2.1, please use torch.set_default_dtype() and torch.set_default_device() as alternatives. (Triggered internally at ../torch/csrc/tensor/python_tensor.cpp:451.)\n",
-      "  _C._set_default_tensor_type(t)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded in 9.45 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from llama_generation import LLAMA_Generation\n",
     "\n",
     "import os\n",
     "\n",
     "os.environ['MASTER_ADDR'] = 'localhost'\n",
-    "os.environ['MASTER_PORT'] = '12356'\n",
+    "os.environ['MASTER_PORT'] = '12355'\n",
     "os.environ['RANK'] = '0'\n",
-    "os.environ['WORLD_SIZE'] = '1'\n",
+    "os.environ['WORLD_SIZE'] = '2'\n",
     "\n",
     "agent = LLAMA_Generation(\n",
-    "        ckpt_dir='llama-2-7b-chat/',\n",
+    "        ckpt_dir='llama-2-13b-chat/',\n",
     "        tokenizer_path='tokenizer.model',\n",
     "        max_seq_len=512,\n",
     "        max_batch_size=8\n",
@@ -50,24 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "YES\n",
-      "8.559226989746094e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "content_text =\\\n",
-    "    \"Yan Zhuang (Senior Member, IEEE) received the Ph.D. degree in control theory and control engineering from the Dalian University of Technology, \\\n",
-    "Dalian, China.,He is a Professor with the School of Artificial Intelligence, Dalian University of Technology, leading the Intelligent Robotics Laboratory \\\n",
-    "(DUT Robotics Laboratory). His research interests include intelligent sensing, modeling, scene recognition, and understanding for mobile robots and other \\\n",
-    "autonomous systems.(Based on document published on 8 August 2023).\"\n",
+    "    \"Younbaek Lee received the M.S. degree in mechanical engineering from Korea Advanced Institute of Science and Technology, Daejeon, South Korea, in 2003.,He is currently a research staff member of the Samsung Advanced Institute of Technology, South Korea. His research interests include electromechanical design, medical/rehabilitation robotics, humanoids, manipulators and physical human-machine interaction.(Based on document published on 14 June 2019)..\"\n",
     "\n",
     "response = agent.generate(content_text, verbose=False)\n",
     "\n",
@@ -88,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
